[package]
name = "cat_hand"
version = "0.1.0"
authors = ["sizumita <contact@sumidora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current", features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"], default-features = false }
tokio = { features = ["full"] }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
lazy_static = "1.4.0"
serde_json = "*"
urlencoding = "2.1.0"
encoding_rs = "0.8.30"
hex = "0.4.3"

