[package]
name = "cat_hand"
version = "0.1.0"
authors = ["sizumita <contact@sumidora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json"] }
scraper = "0.13.0"
lazy_static = "1.4.0"
serde_json = "*"
urlencoding = "2.1.0"
encoding_rs = "0.8.30"
hex = "0.4.3"
chrono = "0.4.19"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "cache"]
default-features = false
